# thewaytcg-recognition-service

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  prototype.ipynb  pyproject.toml  requirements.txt  run.py
docker/: Dockerfile  docker-compose.yml
prototypes/: embeddings.ipynb  levenshtein.ipynb  prototype.ipynb
scripts/: csv_to_json_schema.py  get_embeddings.py  insert_cards.py  pdf_to_png.py  view_cards.py
src/: api.py  database.py  db_setup.py  main.py  models.py
src/the_way_recognition/: config.py  db_setup.py  dependencies.py
src/the_way_recognition/api/routes/: recognition.py
src/the_way_recognition/api/schemas/: card.py
src/the_way_recognition/core/: embeddings.py  matching.py  ocr.py
src/the_way_recognition/db/: database.py  models.py
src/the_way_recognition/db/repositories/: card_repository.py
src/the_way_recognition/utils/: image.py  json_to_text.py
tests/: test_api.py
