[project]
name = "the-way-recognition-service"
version = "0.1.0"
description = "Recognition microservice for The Way card game scanner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "levenshtein>=0.27.3",
    "numpy>=2.3.4",
    "openai-clip>=1.0.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
    "ipykernel>=7.1.0",
    "torchvision>=0.24.0",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
]
