[project]
name = "the-way-recognition-service"
version = "0.1.0"
description = "Recognition microservice for The Way card game scanner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "levenshtein>=0.27.3",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "openai-clip>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
