[project]
name = "the-way-recognition-service"
version = "0.1.0"
description = "Recognition microservice for The Way card game scanner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "levenshtein>=0.27.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.11.0",
    "setuptools<81.0.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "pdf2image>=1.17.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
